# layout_switcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_ru.md  gnome_input_source.py  install.sh  layout_switcher.py  layout_switcher_win  pyproject.toml  start.sh  structure.md  tray_app.py  uninstall.sh
.github/workflows/: deb.yml  release.yml
debian/: changelog  control  install  postinst  postrm
desktop/: kbfix-deb.desktop  kbfix.desktop
experiments/docs/: AUDIT.md
kbfix/: __init__.py  __main__.py  layout_switcher.py  tray_app.py
scripts/: kbfix  publish.sh
systemd/: layout_switcher.service  layout_switcher_example.service  readme.txt
